# khkt-rag

./: .gitignore  1.extract_images_from_docx.py  2.extract_text_from_images.py  3.convert_txt_to_Q.py  5.convert_Ex.py  build_db.py  build_vector_db.py  convert.py  ester-lipid_hoa12-A.txt  gunicorn_config.py  pyproject.toml  query.py  run_api.py  test.py  test_load.py  test_rag.py  Đáp_án_đã_sửa.txt
database/: embedding_checkpoint.json  quiz_storage.db  quiz_storage.db-shm  quiz_storage.db-wal  student_evaluations.db
database/qdrant_storage/: meta.json
src/api/: __init__.py  app.py  gunicorn_config.py
src/tools/: chat_history_manager.py  evaluation_storage.py  graph_generator.py  physics_simulator.py  quiz_generator.py  quiz_guard.py  quiz_storage.py  session_manager.py  submission_manager.py
src/utils/: assign_answers.py  clean_headers_footers.py  docx_to_pdf.py  filter_answer.py  text_normalizer.py
src/vector_db/: 1.extract_images_from_docx.py  2.extract_text_from_images.py  4.convert_Q_to_A.py
